# amc-backend

./: .gitignore  README.md  flake.nix  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml
backend/amc_backend/: asgi.py  settings.py
backend/community/: models.py
docs/: ministry_system.md
scripts/: cargos.sh  deliverypoints.sh
src/amc/: admin.py  apps.py  auth.py  command_framework.py  commands.py  companies.py  context.py  dashboard_services.py  deliverypoints.py  discord_client.py  enums.py  events.py  factories.py  game_server.py  jobs.py  locations.py  mailbox.py  mod_server.py  models.py  save_file.py  server_logs.py  status.py  subsidies.py  tasks.py  test_admin_dashboard.py  test_admin_subsidies.py  test_api.py  test_api_phase1.py  test_bot_events.py  test_delivery_stats_cog.py  test_discord_interactions.py  test_elections.py  test_events.py  test_job_expiration.py  test_jobs_adaptive.py  test_jobs_subsidies.py  test_leaderboard_cog.py  test_locations.py  test_ministry.py  test_models.py  (+18 more)
src/amc/api/: bot_events.py  routes.py  schema.py
src/amc/commands/: __init__.py  admin.py  decals.py  events.py  finance.py  general.py  jobs.py  language.py  rp_rescue.py  social.py  teleport.py  vehicles.py
src/amc/fixtures/: cargo.json  deliverypoints.json
src/amc/migrations/: 0001_initial.py  0002_playerchatlog_text.py  0003_alter_player_discord_user_id.py  0008_company.py  (+142 more)
src/amc_backend/: api.py  asgi.py  settings.py  urls.py  worker.py  wsgi.py
src/amc_cogs/: auth.py  chat.py  commerce.py  delivery_stats.py  economy.py  events.py  jobs.py  leaderboard.py  moderation.py  roleplay.py  status.py  utils.py
src/amc_finance/: admin.py  apps.py  models.py  services.py  tests.py
src/necesse/: apps.py  models.py  server_logs.py  tasks.py
src/players/: models.py
(+15 files in other folders)
