[project]
name = "amc-backend"
version = "0.1.0"
description = "ASEAN Motor Club backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "django>=5.2.3",
    "gunicorn>=23.0.0",
    "uvicorn>=0.34.3",
    "uvicorn-worker>=0.3.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.hatch.build.targets.wheel]
sources = [
  "backend",
]

